fixing contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -350,7 +350,13 @@ main div {
 
 /* -----------JOIN US PAGE-------------- */
 
+.job-position-box:valid {
+    border: greenyellow solid 1px;
+}
 
+.job-position-box:invalid {
+    border: rgb(172, 0, 0) solid 2px;
+}
 
 form fieldset {
     margin: 2rem 0;
